image path updated

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="m-3">
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-          <img src="../../assets/images/notesIcon.jpg" height="50px">
+          <img src="assets/images/notesIcon.jpg" height="50px">
           <div class="navbar-brand lead ml-3 mr-auto">Notes App</div>
         </div>
     </nav>
