empty list alert

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,6 +5,8 @@
                 <div class="card-header lead p-3">Notes List</div>
                 <div class="card-body list">
 
+                    <p *ngIf="!notesList.length" class="alert alert-danger">Notes list empty</p>
+
                     <div *ngIf="!filteredList">
                         <div class="card bg-light mb-2 p-2 note" (click)="viewNote(item)" *ngFor="let item of notesList">
                             <div class="h5 card-title lead">{{ item.title | titlecase }}</div>
