--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
                 <div class="card-header lead p-3">Notes List</div>
                 <div class="card-body list">
 
-                    <p *ngIf="!notesList.length" class="alert alert-danger">
+                    <p *ngIf="!notesList" class="alert alert-danger">
                         No Notes Available
                     </p>
 
